<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bg_home_smooth"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/background_with_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/bg_home_income"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_date_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="February, 28th"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:chipBackgroundColor="#fef6e7"
        app:chipIcon="@drawable/arrow_down_2"
        app:chipIconSize="@null"
        app:chipStartPadding="8dp"
        app:chipStrokeColor="#f1f1fa"
        app:chipStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_from"
        app:layout_constraintEnd_toEndOf="@+id/bg_home_income"
        app:layout_constraintStart_toEndOf="@id/tv_from"
        app:layout_constraintTop_toTopOf="@id/tv_from" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/bg_home_expense"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_date_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="February, 28th"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:chipBackgroundColor="#fef6e7"
        app:chipIcon="@drawable/arrow_down_2"
        app:chipIconSize="@null"
        app:chipStartPadding="8dp"
        app:chipStrokeColor="#f1f1fa"
        app:chipStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_to"
        app:layout_constraintEnd_toEndOf="@+id/bg_home_expense"
        app:layout_constraintStart_toEndOf="@id/tv_to"
        app:layout_constraintTop_toTopOf="@id/tv_to" />

    <View
        android:id="@+id/bg_home_income"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_from" />

    <View
        android:id="@+id/bg_home_expense"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:background="@drawable/red_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_from" />

    <View
        android:id="@+id/bg_home_income_circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/income_white_circle"
        app:layout_constraintBottom_toBottomOf="@id/bg_home_income"
        app:layout_constraintStart_toStartOf="@id/bg_home_income"
        app:layout_constraintTop_toTopOf="@id/bg_home_income" />

    <TextView
        android:id="@+id/tv_income_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/income"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/bg_home_income_circle"
        app:layout_constraintTop_toTopOf="@id/bg_home_income_circle" />


    <TextView
        android:id="@+id/tv_income_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="$1000"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bg_home_income_circle"
        app:layout_constraintStart_toEndOf="@id/bg_home_income_circle" />

    <TextView
        android:id="@+id/tv_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/expense"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/bg_home_expense_circle"
        app:layout_constraintTop_toTopOf="@id/bg_home_expense_circle" />


    <TextView
        android:id="@+id/tv_expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="$1000"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bg_home_expense_circle"
        app:layout_constraintStart_toEndOf="@id/bg_home_expense_circle" />

    <View
        android:id="@+id/bg_home_expense_circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/expense_white_circle"
        app:layout_constraintBottom_toBottomOf="@id/bg_home_expense"
        app:layout_constraintStart_toStartOf="@id/bg_home_expense"
        app:layout_constraintTop_toTopOf="@id/bg_home_expense" />

<!--    <TextView-->
<!--        android:id="@+id/tv_recent_transactions"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="16dp"-->
<!--        android:text="@string/recent_transactions"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/bg_home_smooth" />-->

<!--    <com.google.android.material.chip.Chip-->
<!--        android:id="@+id/chip_see_all"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:backgroundTint="#eee5ff"-->
<!--        android:text="@string/see_all"-->
<!--        android:textColor="#7f3dff"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/bg_home_smooth" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_home_smooth" />

</androidx.constraintlayout.widget.ConstraintLayout>